--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'><!-- Head -->
+<html lang='en'>
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <meta charset='utf-8'>
@@ -8,28 +8,22 @@
     <meta name='description' content=''>
     <meta name='author' content=''>
     <link rel='icon' href='images/favicon/favicon-32x32.png'>
-
     <title>Newsweek</title>
-
     <link href='css/bootstrap.min.css' rel='stylesheet'>
     <link href='css/navbar.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/sidebar.css' rel='stylesheet'>
 </head>
 
-<!-- Body -->
 <body>
-<!-- Navbar -->
 <nav class='topnav navbar navbar-inverse navbar-static-top' role='navigation'>
     <div class='container-fluid'>
-
         <div class='navbar-header hidden-xs'>
             <a href='#' class='pull-left'>
                 <img class='visible-sm visible-lg' src='images/logo/logo_lg.svg' alt=''>
                 <img class='visible-md' src='images/logo/logo-sm.svg' alt=''>
             </a>
         </div>
-
         <ul class='nav navbar-nav navbar-left nav-items visible-md visible-lg'>
             <li><a href='#'>U.S.</a></li>
             <li><a href='#'>WORLD</a></li>
@@ -37,8 +31,6 @@
             <li><a href='#'>TECH &amp; SCIENCE</a></li>
             <li><a href='#' class='glyphicon glyphicon-search'></a></li>
         </ul>
-
-        <!-- Smaller Screen Nav Bar -->
         <div id='navbar' class='navbar-collapse collapse'>
             <a href='#' class='pull-left'>
                 <img class='visible-xs' src='images/logo/logo-sm.svg' alt=''>
@@ -116,8 +108,6 @@
                     </ul>
                 </li>
             </ul>
-
-            <!-- lg Screen Nav Bar -->
             <ul class='nav navbar-nav navbar-right visible-lg visible-md'>
                 <li class='divider-vertical'></li>
                 <li class='dropdown'>
@@ -201,14 +191,12 @@
                     </div>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
 
 <div class='container-fluid main-content'>
     <div class='row'>
-        <!--Main-->
         <div class='col-xs-12 col-md-9 main wrapping'>
             <div class='content-background'>
                 <img src='images/main/main_main.jpg' class='img-responsive'>
@@ -222,9 +210,7 @@
                     </div>
                 </div>
             </div>
-
             <hr class='main-horizontal-divider'>
-
             <div class='row'>
                 <div class='col-xs-12 col-sm-6 sub-box vertical-divider'>
                     <img src='images/main/main1.png' class='img-responsive'>
@@ -237,7 +223,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class='col-xs-12 col-sm-6 sub-box' id='sponsor-special'>
                     <div id='blue-background'>
                         <img src='images/main/main2.jpg' class='img-responsive'>
@@ -257,10 +242,8 @@
             </div>
         </div>
 
-        <!--Side Menu-->
         <div class='sidebar col-xs-12 col-md-3'>
             <div class='nav nav-sidebar'>
-
                 <div class='grey-background'>
                     <div class='bullet-list'>
                         <div class='headlines-title'>
@@ -291,20 +274,12 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </div>
 </div>
 
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
 <script src='js/jquery.min.js'></script>
 <script src='js/bootstrap.min.js'></script>
-
-
 </body>
 </html>
